--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -27,6 +27,11 @@ jobs:
             target: ramips
             subtarget: mt7621
             vermagic: "9c242f353867f49a96054ff8c9f2c460"
+          - tag: "23.05.3"
+            pkgarch: mipsel_24kc
+            target: ramips
+            subtarget: mt7621
+            vermagic: "bee655e7f41679981b85a223f3aba35b"
 
     steps:
       - uses: actions/checkout@v4
